# Fahrten

./: .gitignore  CLAUDE.md  Fahrtenplaner.spec  Freie_Touren_BB_MV_01-03_April_2026.xlsx  README.md  create_excel.py  dev.sh  launcher.py  pyproject.toml  requirements.txt  starten.bat
.devcontainer/: devcontainer.json
.github/workflows/: release.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.streamlit/: config.toml
docs/superpowers/plans/: 2026-05-09-car-anreise.md  2026-05-10-feedback-feature.md  2026-05-17-auto-discover-park-stations.md  2026-05-17-effort-ranked-alternatives.md  2026-05-17-hybrid-car-transit-anreise.md
docs/superpowers/specs/: 2026-05-09-car-anreise-design.md  2026-05-10-feedback-feature-design.md  2026-05-17-auto-discover-park-stations-design.md  2026-05-17-effort-ranked-alternatives-design.md  2026-05-17-hybrid-car-transit-anreise-design.md
fahrtenplaner/: app.py  db_client.py  feedback_client.py  models.py  myres_client.py  optimizer.py  requirements.txt  transit_client.py  updater.py
fahrtenplaner/.streamlit/: config.toml
fahrtenplaner/assets/: style.css
fahrtenplaner/ui/: errors.py  feedback.py  hero.py  map.py  optimization.py  render.py  sidebar.py  state.py  styles.py  update_panel.py
scripts/: diagnose_park_stations.py
tests/: test_db_client.py  test_feedback_client.py  test_optimizer.py  test_transit_client.py
