[project]
name = "fahrten"
version = "0.1.0"
description = "Erhebungsfahrten-Planer für DB-Zugzählungen"
requires-python = ">=3.12"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "curl-cffi>=0.7.0",
    "beautifulsoup4>=4.12.0",
    "googlemaps>=4.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
